[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme/default_theme.tres" type="Theme" id=1]
[ext_resource path="res://theme/fonts/AnonymousPro-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://script/info.gd" type="Script" id=3]

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 640, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "fold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 640, 360 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "unfold"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=20]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Info" type="Control"]
margin_left = 640.0
margin_right = 1920.0
margin_bottom = 720.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fold" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 21 )
anims/fold = SubResource( 22 )
anims/unfold = SubResource( 23 )

[node name="BackGround" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -375.0
margin_top = -270.0
margin_right = 375.0
margin_bottom = 270.0
color = Color( 0.839216, 0.717647, 0.133333, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -351.0
margin_top = -255.0
margin_right = -143.0
margin_bottom = 159.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="Keys"]
margin_right = 208.0
margin_bottom = 57.0
size_flags_vertical = 3
text = "Key1"

[node name="Label2" type="Label" parent="Keys"]
margin_top = 61.0
margin_right = 208.0
margin_bottom = 119.0
size_flags_vertical = 3
text = "Key2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Keys"]
margin_top = 123.0
margin_right = 208.0
margin_bottom = 181.0
size_flags_vertical = 3
text = "Key3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Keys"]
margin_top = 185.0
margin_right = 208.0
margin_bottom = 243.0
size_flags_vertical = 3
text = "Key4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Keys"]
margin_top = 247.0
margin_right = 208.0
margin_bottom = 305.0
size_flags_vertical = 3
text = "Key5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Keys"]
margin_top = 309.0
margin_right = 208.0
margin_bottom = 366.0
size_flags_vertical = 3
text = "Key6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Keys"]
margin_top = 370.0
margin_right = 208.0
margin_bottom = 413.0
text = "Key7"

[node name="Infos" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -255.0
margin_right = 356.0
margin_bottom = 159.0
size_flags_vertical = 3
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="Infos"]
margin_right = 515.0
margin_bottom = 57.0
size_flags_vertical = 3
text = "Info1"
align = 2

[node name="Label2" type="Label" parent="Infos"]
margin_top = 61.0
margin_right = 515.0
margin_bottom = 119.0
size_flags_vertical = 3
text = "Info2"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Infos"]
margin_top = 123.0
margin_right = 515.0
margin_bottom = 181.0
size_flags_vertical = 3
text = "Info3"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Infos"]
margin_top = 185.0
margin_right = 515.0
margin_bottom = 243.0
size_flags_vertical = 3
text = "Info4"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Infos"]
margin_top = 247.0
margin_right = 515.0
margin_bottom = 305.0
size_flags_vertical = 3
text = "Info5"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Infos"]
margin_top = 309.0
margin_right = 515.0
margin_bottom = 366.0
size_flags_vertical = 3
text = "Info6"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Infos"]
margin_top = 370.0
margin_right = 515.0
margin_bottom = 413.0
text = "Info7"
align = 2

[node name="Ok" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -173.0
margin_right = 75.0
margin_bottom = -113.0
focus_next = NodePath("../SourceCode")
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SourceCode" type="LinkButton" parent="."]
margin_left = 899.0
margin_top = 610.0
margin_right = 1016.0
margin_bottom = 631.0
focus_previous = NodePath("../Ok")
focus_mode = 2
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 20 )
shortcut_in_tooltip = false
text = "[Source Code]"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Fold" to="." method="_on_Fold_animation_finished"]
[connection signal="animation_started" from="Fold" to="." method="_on_Fold_animation_started"]
[connection signal="pressed" from="Ok" to="." method="_on_close"]
[connection signal="pressed" from="SourceCode" to="." method="_on_SourceCode_pressed"]
